@@ -22,16 +22,25 @@ import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.databind.util.ISO8601DateFormat;
 import net.krotscheck.features.database.entity.Client.Deserializer;
+import net.krotscheck.test.JacksonUtil;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.net.URL;
+import java.net.URI;
+import java.text.DateFormat;
 import java.util.ArrayList;
+import java.util.Calendar;
 import java.util.Date;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import static org.mockito.Mockito.mock;
@@ -71,88 +80,66 @@ public final class ClientTest {
     }
 
     /**
+     * Assert that we can get and set the secret.
+     */
+    @Test
+    public void testGetSetSecret() {
+        Client c = new Client();
+        String secret = "secret";
+
+        Assert.assertNull(c.getClientSecret());
+        c.setClientSecret(secret);
+        Assert.assertEquals(secret, c.getClientSecret());
+    }
+
+    /**
      * Assert that we can get and set the type.
      */
     @Test
     public void testGetSetType() {
         Client c = new Client();
 
-        Assert.assertEquals(ClientType.Public, c.getType());
-        c.setType(ClientType.Confidential);
-        Assert.assertEquals(ClientType.Confidential, c.getType());
+        Assert.assertEquals(ClientType.AuthorizationGrant, c.getType());
+        c.setType(ClientType.Implicit);
+        Assert.assertEquals(ClientType.Implicit, c.getType());
     }
 
     /**
-     * Assert that we can get and set the client ID.
-     */
-    @Test
-    public void testGetSetClientId() {
-        Client c = new Client();
-        String clientId = "test";
-
-        Assert.assertNull(c.getClientId());
-        c.setClientId(clientId);
-        Assert.assertEquals(clientId, c.getClientId());
-    }
-
-    /**
-     * Assert that the referral URL may be get and set.
+     * Assert that the referral URI may be get and set.
      *
      * @throws Exception Should not be thrown.
      */
     @Test
-    public void testGetSetReferrer() throws Exception {
+    public void testGetSetReferrers() throws Exception {
         Client c = new Client();
-        String url = "https://example.com/oauth/foo?lol=cat#omg";
-        URL referrer = new URL(url);
 
-        Assert.assertNull(c.getReferrer());
-        c.setReferrer(referrer);
-        Assert.assertEquals(referrer, c.getReferrer());
-        Assert.assertEquals(url, c.getReferrer().toString());
+        Set<URI> referrers = new HashSet<>();
+        URI referrer = new URI("https://example.com/oauth/foo?lol=cat#omg");
+        referrers.add(referrer);
+
+        Assert.assertNull(c.getReferrers());
+        c.setReferrers(referrers);
+        Assert.assertEquals(referrers, c.getReferrers());
+        Assert.assertTrue(c.getReferrers().contains(referrer));
     }
 
     /**
-     * Assert that we can set and get the redirection URL.
+     * Assert that we can set and get the redirection URIs.
      *
      * @throws Exception Should not be thrown.
      */
     @Test
-    public void testGetSetRedirect() throws Exception {
+    public void testGetSetRedirects() throws Exception {
         Client c = new Client();
-        String url = "https://example.com/oauth/foo?lol=cat#omg";
-        URL redirect = new URL(url);
 
-        Assert.assertNull(c.getRedirect());
-        c.setRedirect(redirect);
-        Assert.assertEquals(redirect, c.getRedirect());
-        Assert.assertEquals(url, c.getRedirect().toString());
-    }
+        Set<URI> redirects = new HashSet<>();
+        URI redirect = new URI("https://example.com/oauth/foo?lol=cat#omg");
+        redirects.add(redirect);
 
-    /**
-     * Test that the authtoken expiration time may be set and get.
-     */
-    @Test
-    public void testGetSetAuthTokenExpire() {
-        Client c = new Client();
-        Integer expire = 1000;
-
-        Assert.assertEquals(3600, (int) c.getAuthTokenExpire()); // Default
-        c.setAuthTokenExpire(expire);
-        Assert.assertEquals(expire, c.getAuthTokenExpire());
-    }
-
-    /**
-     * Test that the refreshToken expiration time may be set and get.
-     */
-    @Test
-    public void testGetSetRefreshTokenExpire() {
-        Client c = new Client();
-        Integer expire = 1000;
-
-        Assert.assertEquals(604800, (int) c.getRefreshTokenExpire()); // Default
-        c.setRefreshTokenExpire(expire);
-        Assert.assertEquals(expire, c.getRefreshTokenExpire());
+        Assert.assertNull(c.getRedirects());
+        c.setRedirects(redirects);
+        Assert.assertEquals(redirects, c.getRedirects());
+        Assert.assertTrue(c.getRedirects().contains(redirect));
     }
 
     /**
@@ -186,7 +173,126 @@ public final class ClientTest {
     }
 
     /**
-     * Assert that this entity can be serialized into a JSON object, and doesn't
+     * Test get/set authenticator list.
+     */
+    @Test
+    public void testGetSetAuthenticators() {
+        Client client = new Client();
+        List<Authenticator> authenticators = new ArrayList<>();
+        authenticators.add(new Authenticator());
+
+        Assert.assertNull(client.getAuthenticators());
+        client.setAuthenticators(authenticators);
+        Assert.assertEquals(authenticators, client.getAuthenticators());
+        Assert.assertNotSame(authenticators, client.getAuthenticators());
+    }
+
+    /**
+     * Test getting/setting the configuration.
+     */
+    @Test
+    public void testGetSetConfiguration() {
+        Client client = new Client();
+        Map<String, String> configuration = new HashMap<>();
+
+        Assert.assertNull(client.getConfiguration());
+        client.setConfiguration(configuration);
+        Assert.assertEquals(configuration, client.getConfiguration());
+        Assert.assertNotSame(configuration, client.getConfiguration());
+    }
+
+    /**
+     * Assert that we can get the default values for the access expires in
+     * token.
+     */
+    @Test
+    public void testGetAccessExpiresIn() {
+        Client client = new Client();
+        Map<String, String> configuration = new HashMap<>();
+        Integer expectedDefault = 10 * 60; // Ten minutes
+
+        // Assert no config.
+        Assert.assertEquals(expectedDefault, client.getAccessTokenExpireIn());
+
+        // Assert empty config.
+        client.setConfiguration(configuration);
+        Assert.assertEquals(expectedDefault, client.getAccessTokenExpireIn());
+
+        // Assert unparseable config
+        configuration.put(ClientConfig.ACCESS_TOKEN_EXPIRES_NAME, "not_an_int");
+        client.setConfiguration(configuration);
+        Assert.assertEquals(expectedDefault, client.getAccessTokenExpireIn());
+
+        // Assert parseable config
+        configuration.put(ClientConfig.ACCESS_TOKEN_EXPIRES_NAME, "50");
+        client.setConfiguration(configuration);
+        Assert.assertEquals((Integer) 50, client.getAccessTokenExpireIn());
+    }
+
+    /**
+     * Assert that we can get the default values for the refresh token.
+     */
+    @Test
+    public void testGetRefreshExpiresIn() {
+        Client client = new Client();
+        Map<String, String> configuration = new HashMap<>();
+        Integer expectedDefault = 60 * 60 * 24 * 30; // One month.
+
+        // Assert no config.
+        Assert.assertEquals(expectedDefault, client.getRefreshTokenExpireIn());
+
+        // Assert empty config.
+        client.setConfiguration(configuration);
+        Assert.assertEquals(expectedDefault, client.getRefreshTokenExpireIn());
+
+        // Assert unparseable config
+        configuration
+                .put(ClientConfig.REFRESH_TOKEN_EXPIRES_NAME, "not_an_int");
+        client.setConfiguration(configuration);
+        Assert.assertEquals(expectedDefault, client.getRefreshTokenExpireIn());
+
+        // Assert parseable config
+        configuration.put(ClientConfig.REFRESH_TOKEN_EXPIRES_NAME, "50");
+        client.setConfiguration(configuration);
+        Assert.assertEquals((Integer) 50, client.getRefreshTokenExpireIn());
+    }
+
+    /**
+     * Assert that we can get the default values for the refresh token.
+     */
+    @Test
+    public void getGetAuthorizationCodeExpiresIn() {
+        Client client = new Client();
+        Map<String, String> configuration = new HashMap<>();
+        Integer expectedDefault = 60 * 10; // Ten minutes.
+
+        // Assert no config.
+        Assert.assertEquals(expectedDefault,
+                client.getAuthorizationCodeExpiresIn());
+
+        // Assert empty config.
+        client.setConfiguration(configuration);
+        Assert.assertEquals(expectedDefault,
+                client.getAuthorizationCodeExpiresIn());
+
+        // Assert unparseable config
+        configuration
+                .put(ClientConfig.AUTHORIZATION_CODE_EXPIRES_NAME,
+                        "not_an_int");
+        client.setConfiguration(configuration);
+        Assert.assertEquals(expectedDefault,
+                client.getAuthorizationCodeExpiresIn());
+
+        // Assert parseable config
+        configuration.put(ClientConfig.AUTHORIZATION_CODE_EXPIRES_NAME, "50");
+        client.setConfiguration(configuration);
+        Assert.assertEquals((Integer) 50,
+                client.getAuthorizationCodeExpiresIn());
+    }
+
+    /**
+     * Assert that this entity can be serialized into a JSON object, and
+     * doesn't
      * carry an unexpected payload.
      *
      * @throws Exception Should not be thrown.
@@ -206,26 +312,34 @@ public final class ClientTest {
         state.setId(UUID.randomUUID());
         states.add(state);
 
-        String path = "https://example.com/oauth/foo?lol=cat#omg";
-        URL url = new URL(path);
+        Set<URI> referrers = new HashSet<>();
+        referrers.add(new URI("https://example.com/oauth/foo?lol=cat#omg"));
+        Set<URI> redirects = new HashSet<>();
+        redirects.add(new URI("https://example.com/oauth/foo?lol=cat#omg"));
+
+        Map<String, String> configuration = new HashMap<>();
+        configuration.put("one", "value");
+        configuration.put("two", "value");
 
         Client c = new Client();
         c.setApplication(application);
         c.setId(UUID.randomUUID());
-        c.setCreatedDate(new Date());
-        c.setModifiedDate(new Date());
+        c.setCreatedDate(Calendar.getInstance());
+        c.setModifiedDate(Calendar.getInstance());
         c.setName("name");
-        c.setType(ClientType.Confidential);
-        c.setRedirect(url);
-        c.setReferrer(url);
-        c.setClientId("clientId");
+        c.setClientSecret("clientSecret");
+        c.setType(ClientType.AuthorizationGrant);
+        c.setRedirects(redirects);
+        c.setReferrers(referrers);
+        c.setConfiguration(configuration);
 
         // These should not serialize.
         c.setTokens(tokens);
         c.setStates(states);
 
         // De/serialize to json.
-        ObjectMapper m = new ObjectMapper();
+        ObjectMapper m = JacksonUtil.buildMapper();
+        DateFormat format = new ISO8601DateFormat();
         String output = m.writeValueAsString(c);
         JsonNode node = m.readTree(output);
 
@@ -233,11 +347,11 @@ public final class ClientTest {
                 c.getId().toString(),
                 node.get("id").asText());
         Assert.assertEquals(
-                c.getCreatedDate().getTime(),
-                node.get("createdDate").asLong());
+                format.format(c.getCreatedDate().getTime()),
+                node.get("createdDate").asText());
         Assert.assertEquals(
-                c.getModifiedDate().getTime(),
-                node.get("modifiedDate").asLong());
+                format.format(c.getCreatedDate().getTime()),
+                node.get("modifiedDate").asText());
 
         Assert.assertEquals(
                 c.getApplication().getId().toString(),
@@ -246,26 +360,32 @@ public final class ClientTest {
                 c.getName(),
                 node.get("name").asText());
         Assert.assertEquals(
+                c.getClientSecret(),
+                node.get("clientSecret").asText());
+        Assert.assertEquals(
                 c.getType().toString(),
                 node.get("type").asText());
-        Assert.assertEquals(
-                c.getRedirect().toString(),
-                node.get("redirect").asText());
-        Assert.assertEquals(
-                c.getReferrer().toString(),
-                node.get("referrer").asText());
-        Assert.assertEquals(
-                c.getClientId(),
-                node.get("clientId").asText());
-        Assert.assertEquals(
-                (long) c.getAuthTokenExpire(),
-                node.get("authTokenExpire").asLong());
-        Assert.assertEquals(
-                (long) c.getRefreshTokenExpire(),
-                node.get("refreshTokenExpire").asLong());
-
         Assert.assertFalse(node.has("tokens"));
         Assert.assertFalse(node.has("states"));
+
+        // Extract the referrers
+        ArrayNode referrerNode = (ArrayNode) node.get("referrers");
+        Assert.assertEquals("https://example.com/oauth/foo?lol=cat#omg",
+                referrerNode.get(0).asText());
+
+        // Extract the redirects
+        ArrayNode redirectNode = (ArrayNode) node.get("redirects");
+        Assert.assertEquals("https://example.com/oauth/foo?lol=cat#omg",
+                redirectNode.get(0).asText());
+
+        // Get the configuration node.
+        JsonNode configurationNode = node.get("configuration");
+        Assert.assertEquals(
+                "value",
+                configurationNode.get("one").asText());
+        Assert.assertEquals(
+                "value",
+                configurationNode.get("two").asText());
 
         // Enforce a given number of items.
         List<String> names = new ArrayList<>();
@@ -273,7 +393,7 @@ public final class ClientTest {
         while (nameIterator.hasNext()) {
             names.add(nameIterator.next());
         }
-        Assert.assertEquals(11, names.size());
+        Assert.assertEquals(10, names.size());
     }
 
     /**
@@ -283,18 +403,30 @@ public final class ClientTest {
      */
     @Test
     public void testJacksonDeserializable() throws Exception {
-        ObjectMapper m = new ObjectMapper();
+        ObjectMapper m = JacksonUtil.buildMapper();
+        DateFormat format = new ISO8601DateFormat();
         ObjectNode node = m.createObjectNode();
         node.put("id", UUID.randomUUID().toString());
-        node.put("createdDate", new Date().getTime());
-        node.put("modifiedDate", new Date().getTime());
+        node.put("createdDate",
+                format.format(Calendar.getInstance().getTime()));
+        node.put("modifiedDate",
+                format.format(Calendar.getInstance().getTime()));
         node.put("name", "name");
-        node.put("type", "Confidential");
-        node.put("redirect", "https://example.com/oauth/foo?lol=cat#omg");
-        node.put("referrer", "https://example.com/oauth/foo?lol=cat#omg");
-        node.put("clientId", "clientId");
-        node.put("authTokenExpire", 100);
-        node.put("refreshTokenExpire", 100);
+        node.put("type", "Implicit");
+        node.put("clientSecret", "clientSecret");
+
+        ObjectNode configurationNode = m.createObjectNode();
+        configurationNode.put("one", "value");
+        configurationNode.put("two", "value");
+        node.set("configuration", configurationNode);
+
+        ArrayNode referrers = node.arrayNode();
+        referrers.add("https://example.com/oauth/foo?lol=cat#omg");
+        node.set("referrers", referrers);
+
+        ArrayNode redirects = node.arrayNode();
+        redirects.add("https://example.com/oauth/foo?lol=cat#omg");
+        node.set("redirects", redirects);
 
         String output = m.writeValueAsString(node);
         Client c = m.readValue(output, Client.class);
@@ -303,33 +435,38 @@ public final class ClientTest {
                 c.getId().toString(),
                 node.get("id").asText());
         Assert.assertEquals(
-                c.getCreatedDate().getTime(),
-                node.get("createdDate").asLong());
+                format.format(c.getCreatedDate().getTime()),
+                node.get("createdDate").asText());
         Assert.assertEquals(
-                c.getModifiedDate().getTime(),
-                node.get("modifiedDate").asLong());
+                format.format(c.getModifiedDate().getTime()),
+                node.get("modifiedDate").asText());
 
         Assert.assertEquals(
                 c.getName(),
                 node.get("name").asText());
         Assert.assertEquals(
+                c.getClientSecret(),
+                node.get("clientSecret").asText());
+        Assert.assertEquals(
                 c.getType().toString(),
                 node.get("type").asText());
+        Assert.assertEquals(1, c.getRedirects().size());
+        Assert.assertEquals(1, c.getReferrers().size());
+        Assert.assertTrue(c.getRedirects()
+                .contains(new URI("https://example"
+                        + ".com/oauth/foo?lol=cat#omg")));
+        Assert.assertTrue(c.getReferrers()
+                .contains(new URI("https://example"
+                        + ".com/oauth/foo?lol=cat#omg")));
+
+        Map<String, String> configuration = c.getConfiguration();
+
         Assert.assertEquals(
-                c.getRedirect().toString(),
-                node.get("redirect").asText());
+                configuration.get("one"),
+                configurationNode.get("one").asText());
         Assert.assertEquals(
-                c.getReferrer().toString(),
-                node.get("referrer").asText());
-        Assert.assertEquals(
-                c.getClientId(),
-                node.get("clientId").asText());
-        Assert.assertEquals(
-                (long) c.getAuthTokenExpire(),
-                node.get("authTokenExpire").asLong());
-        Assert.assertEquals(
-                (long) c.getRefreshTokenExpire(),
-                node.get("refreshTokenExpire").asLong());
+                configuration.get("two"),
+                configurationNode.get("two").asText());
     }
 
     /**
